@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-20T08:35:21Z",
+  "timestamp" : "2022-10-21T02:07:58Z",
   "count_outdated" : 837,
   "uniques_outdated" : 439,
-  "count" : 862,
+  "count" : 863,
   "uniques" : 453,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-10-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
